--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Mengdu.GitHub.io</h1>
-      <h2 class="project-tagline">github page</h2>
+      <h1 class="project-name">蓝月萧枫</h1>
+      <h2 class="project-tagline">一个造轮子的青年...</h2>
     </section>
 
     <section class="main-content">
