--- a/sanlan/index.html
+++ b/sanlan/index.html
@@ -12,6 +12,12 @@
 	<link rel="stylesheet" href="css/article.css" media="screen" title="no title">
 </head>
 <body>
+	<!-- github-link -->
+	<div class="github-link">
+		<a href="https://github.com/mengdu/mengdu.github.io">
+			<img src="images/github-hover.png" alt="github">
+		</a>
+	</div>
 	<div class="container-full">
 		<div class="row">
 			<div class="header">
