--- a/sanlan/left-sidebar.html
+++ b/sanlan/left-sidebar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scrollbar pretty-scrollbar scrollbar-btn-none" data-scroll="{nowel:20,step:300}">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="css/grid.css" media="screen" title="no title">
 	<link rel="stylesheet" href="css/common.css" media="screen" title="no title">
 	<link rel="stylesheet" href="css/article.css" media="screen" title="no title">
+	<link rel="stylesheet" href="css/scrollbar.css" media="screen" title="no title">
+	<script type="text/javascript" src="css/scrollbar.js"></script>
 </head>
 <body>
 	<!-- github-link -->
