--- a/sanlan/index.html
+++ b/sanlan/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scrollbar pretty-scrollbar scrollbar-btn-none" data-scroll="{nowel:20,step:300}">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>sanlan index</title>
 	<link rel="stylesheet" href="css/normalize.css" media="screen" title="no title">
+	
 	<link rel="stylesheet" href="css/Open Sans.css" media="screen" title="no title">
 	<link rel="stylesheet" href="css/grid.css" media="screen" title="no title">
 	<link rel="stylesheet" href="css/common.css" media="screen" title="no title">
 	<link rel="stylesheet" href="css/article.css" media="screen" title="no title">
+	<link rel="stylesheet" href="css/scrollbar.css" media="screen" title="no title">
+	<script type="text/javascript" src="css/scrollbar.js"></script>
 </head>
 <body>
 	<!-- github-link -->
