--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@ permalink: /404.html
       padding: 0;
       margin: 0;
       width: 100%;
+      overflow: hidden;
     }
     .notfount{
       text-align: center;
@@ -41,7 +42,7 @@ permalink: /404.html
 <body>
 
 <div class="notfount">
-    <img src="images/404.jpg" >
+    <img src=" http://mengdu.github.io/images/404.jpg" >
     <div class="link">
       <a href="http://mengdu.github.io">返回主页</a>
     </div>
