--- a/404.html
+++ b/404.html
@@ -1,6 +1,3 @@
----
-permalink: /404.html
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +10,8 @@ permalink: /404.html
   <style >
     html,body{
       height: 100%;
+      font-family: '微软雅黑';
+      font-size: 0.9em;
     }
     body{
       background: #fff;
@@ -33,9 +32,15 @@ permalink: /404.html
       border: none;
       text-decoration: none;
     }
-    .notfount a{
-      color:#3B8BE0;
-      text-decoration: none;
+    .btn{
+    	color: #fff;
+    	padding: 10px;
+    	background:#5BC0DE;
+    	border-radius: 3px;
+    	text-decoration: none;
+    }
+    .btn:hover{
+    	background:#31B0D5;
     }
   </style>
 <head>
@@ -44,7 +49,8 @@ permalink: /404.html
 <div class="notfount">
     <img src=" http://mengdu.github.io/images/404.jpg" >
     <div class="link">
-      <a href="http://mengdu.github.io">返回主页</a>
+      <a href="http://mengdu.github.io" class="btn">返回主页</a>
+      <a href="https://www.github.com/mengdu" class="btn">GitHub</a>
     </div>
 </div>
 </body>
