--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       color: #36373a;
       text-decoration: none;
       padding: 5px;
-      
+      font-weight: bold;
       border-radius: 3px;
     }
     .user-links a:hover{
@@ -82,6 +82,7 @@
         <p class="user-links">
           <a href="http://mengdu.github.io/blog" class="btn btn-info">博客</a>
           <a href="https://www.github.com/mengdu" class="btn btn-primary">github</a>
+          <a href="static/mengdu-php-resume.pdf" class="btn btn-primary">个人简历</a>
         </p>
         
 
