--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       padding: 0;
       margin: 0;
       background:#F4F4F4;
+      overflow: hidden;
     }
     .mlay{
       background-color:transparent;
@@ -66,6 +67,7 @@
   
 </head>
 <body>
+  <canvas id="Mycanvas"></canvas>
   <div class="tips">
     <div class="tips-info">Page 正在建设中...</div>
   </div>
@@ -90,6 +92,7 @@
       
     </div>
   </div>
+  <script type="text/javascript" src="js/canvas-effect.js"></script>
 </body>
 </html>
 
